      "Host check command expanded"
    * FIX: Corrected garbled description for sorter "Service Performance data" 

    Livestatus:
    * Added new table statehist, used for SLA queries
    * Added new column check_command_expanded in table hosts
    * Added new column check_command_expanded in table services

    BI:
    * Added missing localizations
    * Added option bit_precompile_on_demand to split compilations of
      the aggregations in several fragments. If possible only the needed
      aggregations are compiled to reduce the time a user has to wait for
      BI based view. This optimizes BI related views which display
      information for a specific list of hosts or aggregation groups.
    * Added new config option bi_compile_log to collect statistics about
      aggregation compilations
    * Correct representation of (!), (!!) and (?) markers in check output
    * Corrected representation of assumed state in box layout

    WATO:
    * Added progress indicator in single site WATO "Activate Changes"
    * Users & Contacts: Case-insensitive sorting of 'Full name' column
    * ntp/ntp.time parameters are now configurable via WATO
    * FIX: Implemented basic non HTTP 200 status code response handling in interactive
           progress dialogs (e.g. bulk inventory mode)
    * FIX: Fixed editing of icon_image rules
    * Added support of locked hosts and folders ( created by CMDB )

    Checks & Agents:
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * Check_MK service is now able to output additional performance data
      user_time, system_time, children_user_time, children_system time
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * Windows agent: output ullTotalVirtual and ullAvailVirtual (not yet
      being used by check)
    * Solaris agent: add <<<uptime>>> section (thanks to Daniel Roettgermann)